orgMetadata/force-app/main/default/objects/Employer_and_TPA_Plans__c/Employer_and_TPA_Plans__c.object-meta.xml
<CustomObject>
    <label>Employer and TPA Plan</label>
    <nameField>
        <displayFormat>GP-{000000}</displayFormat>
        <label>Employer and TPA Plans Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employer and TPA Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>