orgMetadata/force-app/main/default/objects/Employer_and_TPA_Plans__c/fields/CK_F__c.field-meta.xml
<CustomField>
    <fullName>CK_F__c</fullName>
    <formula>IF(Combined_Key__c 
 = TPA__r.IntPS__External_ID__c +&quot;_&quot;+ Group__r.IntPS__External_ID__c +&quot;_&quot;+ Health_Plan__r.IntPS__ExternalID__c,&quot;&quot;,&quot;ERROR&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CK_F</label>
    <type>Text</type>
</CustomField>