orgMetadata/force-app/main/default/objects/Employer_and_TPA_Plans__c/fields/Combined_Key__c.field-meta.xml
<CustomField>
    <fullName>Combined_Key__c</fullName>
    <externalId>true</externalId>
    <label>Combined Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>