orgMetadata/force-app/main/default/objects/Employer_and_TPA_Plans__c/fields/EHIM__c.field-meta.xml
<CustomField>
    <fullName>EHIM__c</fullName>
    <description>EHIM Group #</description>
    <label>EHIM Group Number</label>
    <length>11</length>
    <type>Text</type>
</CustomField>