orgMetadata/force-app/main/default/objects/Employer_and_TPA_Plans__c/fields/EHIM_Ignore_Deductible__c.field-meta.xml
<CustomField>
    <fullName>EHIM_Ignore_Deductible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EHIM - Ignore Deductible</label>
    <type>Checkbox</type>
</CustomField>