orgMetadata/force-app/main/default/objects/Employer_and_TPA_Plans__c/fields/EHIM_Location_ID__c.field-meta.xml
<CustomField>
    <fullName>EHIM_Location_ID__c</fullName>
    <description>EHIM Location ID</description>
    <label>EHIM Location ID</label>
    <length>2</length>
    <type>Text</type>
</CustomField>