orgMetadata/force-app/main/default/objects/Employer_and_TPA_Plans__c/fields/EHIM_RX_Plan_Code__c.field-meta.xml
<CustomField>
    <fullName>EHIM_RX_Plan_Code__c</fullName>
    <description>RX Plan Codes</description>
    <label>EHIM RX Plan Code</label>
    <length>11</length>
    <type>Text</type>
</CustomField>