orgMetadata/force-app/main/default/objects/Employer_and_TPA_Plans__c/fields/EHIM_TPA__c.field-meta.xml
<CustomField>
    <fullName>EHIM_TPA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>EHIM TPA</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Employer and TPA Plans (EHIM TPA)</relationshipLabel>
    <relationshipName>Employer_and_TPA_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>