orgMetadata/force-app/main/default/objects/Employer_and_TPA_Plans__c/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Group</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Plans and TPAs</relationshipLabel>
    <relationshipName>Plans_and_TPAs</relationshipName>
    <type>Lookup</type>
</CustomField>