orgMetadata/force-app/main/default/objects/Employer_and_TPA_Plans__c/fields/HMA_Plan_Code__c.field-meta.xml
<CustomField>
    <fullName>HMA_Plan_Code__c</fullName>
    <label>HMA Plan Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>