orgMetadata/force-app/main/default/objects/Employer_and_TPA_Plans__c/fields/Network_Acronym__c.field-meta.xml
<CustomField>
    <fullName>Network_Acronym__c</fullName>
    <label>Network Acronym</label>
    <length>255</length>
    <type>Text</type>
</CustomField>