orgMetadata/force-app/main/default/objects/Employer_and_TPA_Plans__c/fields/Pricing_Group_Code__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Group_Code__c</fullName>
    <label>Pricing Group Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>