orgMetadata/force-app/main/default/objects/Employer_and_TPA_Plans__c/fields/Pricing_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pricing Vendor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Employer and TPA Plans (Pricing Vendor)</relationshipLabel>
    <relationshipName>Employer_and_TPA_Plans1</relationshipName>
    <type>Lookup</type>
</CustomField>