orgMetadata/force-app/main/default/objects/Employer_and_TPA_Plans__c/fields/RedCard__c.field-meta.xml
<CustomField>
    <fullName>RedCard__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RedCard</label>
    <type>Checkbox</type>
</CustomField>