orgMetadata/force-app/main/default/objects/Employer_and_TPA_Plans__c/fields/To_HMA_834__c.field-meta.xml
<CustomField>
    <fullName>To_HMA_834__c</fullName>
    <defaultValue>false</defaultValue>
    <label>To HMA 834</label>
    <type>Checkbox</type>
</CustomField>