orgMetadata/force-app/main/default/objects/Employer_and_TPA_Plans__c/listViews/Copy_of_Group_Capital_One_Hotel_Group.listView-meta.xml
<ListView>
    <fullName>Copy_of_Group_Capital_One_Hotel_Group</fullName>
    <filterScope>Everything</filterScope>
    <label>Group - Trident</label>
</ListView>