orgMetadata/force-app/main/default/objects/Employer_and_TPA_Plans__c/listViews/EHIM_Accumulators.listView-meta.xml
<ListView>
    <fullName>EHIM_Accumulators</fullName>
    <filterScope>Everything</filterScope>
    <label>EHIM - Sending Accumulators</label>
</ListView>