orgMetadata/force-app/main/default/objects/Employer_and_TPA_Plans__c/listViews/Group_Capital_One_Hotel_Group.listView-meta.xml
<ListView>
    <fullName>Group_Capital_One_Hotel_Group</fullName>
    <filterScope>Everything</filterScope>
    <label>Group - Capital One Hotel Group</label>
</ListView>