orgMetadata/force-app/main/default/objects/Employer_and_TPA_Plans__c/listViews/Pricing_Vendor.listView-meta.xml
<ListView>
    <fullName>Pricing_Vendor</fullName>
    <filterScope>Everything</filterScope>
    <label>Pricing Vendor</label>
</ListView>